<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="FaultMessage" Id="{9cefe650-0b21-4bd1-82f2-8e73c473b3c2}">
    <Declaration><![CDATA[TYPE FaultMessage :
STRUCT
	Id		: DINT;			// Identifier for Fault Condition
	Text	: T_MaxString;	// Text (Message) for Fault Condition
	AltText	: T_MaxString;	// Alt Text for Fault Condition
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>